--- a/styles/about_project.css
+++ b/styles/about_project.css
@@ -24,7 +24,7 @@ body{
     min-height: 100vh;
     font: inherit;
     display: grid;
-    grid-template-rows: 10% 42% auto 10%;
+    grid-template-rows: 10% 42% auto 15%;
 }
 
 
@@ -89,20 +89,66 @@ body{
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    align-items: center;
 }
 
 .soc-med-git{
     flex: 1 0 0;
+    text-align: center;
+    
 }
 
 .soc-med-tg{
     flex: 1 0 0;
+    text-align: center;
 }
 
 .soc-med-mail{
     flex: 1 0 0;
+    text-align: center;
 }
 
+.soc-med-tg center > *{
+    display: inline-block;
+    width: fit-content;
+    max-height: fit-content;
+}
+
+.social-media-bottom a:hover{
+    color: wheat;
+}
+
+.tg::before{
+    content: '';
+    background-size: cover;
+    background-image: url(../images/123.png);
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    transform: translateY(25%);
+    margin-right: 5px;
+}
+
+.mail::before{
+    content: '';
+    background-size: cover;
+    background-image: url(../images/mail.png);
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    transform: translateY(25%);
+    margin-right: 5px;
+}
+.git::before{
+    content: '';
+    background-size: cover;
+    background-image: url(../images/github.png);
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    transform: translateY(25%);
+    margin-right: 5px;
+}
 
 
 
