--- a/styles/animation_test.css
+++ b/styles/animation_test.css
@@ -43,6 +43,25 @@ body{
 
 .flex-element-logo{
     flex: 0 0 19.5%;
+    display: flex;
+    max-height: 100%;
+    justify-content: space-between;
+}
+
+.logo-img{
+    object-fit: contain;
+    flex: 0 0 40%;
+    width: 40%;
+}
+
+.logo-text{
+    flex-grow: 1;
+    font-size: 220%;
+    margin: 3.78% 0 0 0 ;
+    font-weight: bold;
+    letter-spacing: 0.2em;
+    color:#4C1A4A;
+    line-height: 101%
 }
 
 .flex-element-blog{
