--- a/styles/account.css
+++ b/styles/account.css
@@ -127,6 +127,13 @@ body{
 
 }
 
+.animation-for-quastion-box {
+    animation-name: animation-after-get-answer;
+    animation-duration: 2.5s;
+    animation-delay: 0.3s;
+    animation-fill-mode: forwards;
+}
+
 /* #endregion*/
 
 /* #endregion*/
@@ -139,4 +146,13 @@ body{
     font-style: normal;
     font-display: swap;
 }
+
+/* #region animation*/
+@keyframes animation-after-get-answer {
+    100% {
+        height: 90%;
+        width: 80%;
+    }
+}
+/* #endregion*/
 
