--- a/styles/account.css
+++ b/styles/account.css
@@ -1,17 +1,5 @@
 /* #region global*/
 
-a{
-    font-family: inherit;
-    text-decoration: none;
-    color: inherit;
-}
-
-
-body{
-    margin: 0;
-    font-family: "Roboto";
-}
-
 .main-box button:hover{
     color: #ffa600;
 }
@@ -23,71 +11,7 @@ body{
 
 
 /*#region menu*/
-.menu {
-    background-color: #ffffff;
-    display: flex;
-    justify-content: center;
-    gap: 0.5vw;
-    align-items: center;
-    height: 10vh;
-}
 
-.flex-element-logo{
-    flex: 0 0 19.5%;
-    display: flex;
-    max-height: 100%;
-    justify-content: space-between;
-}
-
-.logo-img{
-    object-fit: contain;
-    flex: 0 0 40%;
-    width: 40%;
-}
-
-.logo-text{
-    flex-grow: 1;
-    font-size: 220%;
-    margin: 3.78% 0 0 0 ;
-    font-weight: bold;
-    letter-spacing: 0.2em;
-    color:#4C1A4A;
-    line-height: 101%
-}
-
-.flex-element-blog{
-    flex-grow: 1;
-}
-
-.flex-element-discusion{
-    flex-grow: 1;
-}
-
-.flex-element-accaunt{
-    flex-grow: 1;
-}
-
-.flex-element-aboutProject{
-    flex-grow: 1;
-}
-
-.menu button,
-.flex-button {
-    background-color: #4C1A4A;
-    color: #fff;
-    font: inherit;
-    border-radius: 30px;
-    border: black;
-    width: 83%;
-    height: 7.5vh;
-    font-size: 197%;
-    cursor: pointer;
-}
-
-.menu button:hover,
-.flex-button:hover {
-    color: #ffa600;
-}
 
 /* #endregion*/
 
@@ -138,20 +62,14 @@ body{
 
 /* #endregion*/
 
-@font-face {
-    font-family: "Roboto";
-    src: url(../fonts/ROBOTOSLAB-REGULAR.TTF
-    )format("truetype");
-    font-weight: 400;
-    font-style: normal;
-    font-display: swap;
-}
+
 
 /* #region animation*/
 @keyframes animation-after-get-answer {
     100% {
         height: 90%;
         width: 80%;
+        transform: translateY(10%);
     }
 }
 /* #endregion*/
