--- a/styles/account.css
+++ b/styles/account.css
@@ -8,14 +8,6 @@
     background-color: #ffa600;
 }
 /*#endregion*/
-
-
-/*#region menu*/
-
-
-/* #endregion*/
-
-
 /* #region main-box*/
 .flex-box {
     display: flex;
@@ -27,11 +19,14 @@
 }
 
 /*#region quastion-box*/
-.quastion-box {
+.question-box {
     position: relative;
     width: 40vw;
     height: 600px;
     background-color: #fff;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .button-choice-over-two {
@@ -41,11 +36,12 @@
     justify-content: space-around;
     position: relative;
     top: 20%;
+    width: inherit;
 }
 
 .flex-button {
     flex-grow: 0.3;
-    width: 1.6vw;
+    width: 2.6vw;
     height: 5vw;
     font-size: 2.1vw;
 
@@ -58,6 +54,25 @@
     animation-fill-mode: forwards;
 }
 
+
+form input {
+    width: 50%;
+    margin-left: 15%;
+    max-height: fit-content;
+}
+
+form label {
+    margin-left: 30%;
+    font-size: large;
+}
+
+.registration-form-visiable {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-row-gap: 60%; */
+    margin-top: 10%;
+    max-height: fit-content;
+}
 /* #endregion*/
 
 /* #endregion*/
