--- a/styles/account.css
+++ b/styles/account.css
@@ -17,6 +17,19 @@
     overflow: hidden; /* scroll*/
     background-color: #4C1A4A;
 }
+.registration-box {
+    /* position: absolute; */
+    width: 60vw;
+    height: 70vh;
+    display: flex;
+    justify-content: left;
+    flex-basis: inherit;
+    /* top: 14%; */
+}
+
+.hide {
+    display: none;
+}
 
 /*#region quastion-box*/
 .question-box {
@@ -56,7 +69,7 @@
 
 
 form input {
-    width: 50%;
+    width: 95%;
     margin-left: 15%;
     max-height: fit-content;
 }
@@ -64,6 +77,7 @@ form input {
 form label {
     margin-left: 30%;
     font-size: large;
+    max-height: fit-content;
 }
 
 .registration-form-visiable {
@@ -71,7 +85,8 @@ form label {
     grid-template-columns: 1fr 1fr;
     /* grid-row-gap: 60%; */
     margin-top: 10%;
-    max-height: fit-content;
+/* max-height: fit-content; */
+    width: 100%;
 }
 /* #endregion*/
 
@@ -86,6 +101,9 @@ form label {
         width: 80%;
         transform: translateY(10%);
     }
+}
+@keyframes input-animation {
+    
 }
 /* #endregion*/
 
