--- a/styles/account.css
+++ b/styles/account.css
@@ -22,7 +22,7 @@
     width: 60vw;
     height: 70vh;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     flex-basis: inherit;
     /* top: 14%; */
 }
@@ -69,7 +69,7 @@
 
 
 form input {
-    width: 95%;
+    width: 50%;
     margin-left: 15%;
     max-height: fit-content;
 }
@@ -85,11 +85,8 @@ form label {
     grid-template-columns: 1fr 1fr;
     /* grid-row-gap: 60%; */
     margin-top: 10%;
-<<<<<<< HEAD
-=======
     max-height: fit-content;
     grid-template-rows: 80px 80px 80px 80px;
->>>>>>> 9e94aeb (nothing is changing their size)
 }
 /* #endregion*/
 
